# paisa

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  heroku.yml  pyproject.toml  railway.toml  requirements.txt
backend/app/: __init__.py  auth.py  categorizer.py  config.py  crud.py  db.py  main.py  push.py  scheduler.py  schemas.py
backend/app/parsing/: __init__.py  deterministic_parser.py  glm_client.py  image_parser.py  pdf_pipeline.py  pdfplumber_extract.py
backend/app/routers/: __init__.py  auth.py  budgets.py  items.py  notifications.py  orders.py  parse.py  summary.py
backend/migrations/: 001_init.sql
frontend/: .env.local.example  README.md  eslint.config.mjs  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/budgets/: page.tsx
frontend/app/fees/: page.tsx
frontend/app/history/: page.tsx
frontend/app/login/: page.tsx
frontend/app/weekly/: page.tsx
frontend/components/: AppShell.tsx  ClientLayout.tsx  Icons.tsx  ServiceWorkerRegister.tsx
frontend/components/dashboard/: BudgetHero.tsx  CategoryBreakdown.tsx  Fab.tsx  RecentEntries.tsx
frontend/components/entry/: AddSheetProvider.tsx  CategoryPicker.tsx  ChargesCollapse.tsx  ManualForm.tsx  ReviewCards.tsx  UploadFlow.tsx
frontend/components/ui/: Badge.tsx  BarChart.tsx  BottomSheet.tsx  BurnBar.tsx  Button.tsx  Card.tsx  Skeleton.tsx  (+1 more)
frontend/lib/: api.ts  auth.ts  categories.ts  format.ts  types.ts
frontend/public/: manifest.webmanifest  sw.js
(+3 files in other folders)
