[project]
name = "paisa-backend"
version = "1.0.0"
description = "Personal expense tracker API — parsing, summaries, budgets, push."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "cryptography>=48.0.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pdfplumber>=0.11.9",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.32",
    "pywebpush>=2.3.0",
    "uvicorn[standard]>=0.49.0",
]
